--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,7 +8,7 @@
     padding: 0;
     background-repeat: no-repeat;
     border: 2px solid #FFFFFF;
-    border-radius: 2px;;
+    border-radius: 2px;
 
 }
 
