--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,13 +4,14 @@
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
+    justify-self: center;
 }
 
 @media (max-width: 880px) {
     .profile__name{
         font-size: 27px;
         line-height: 33px;
-        margin-left: 46px;
+        
 
     }
 
