--- a/blocks/modal/__form/modal__form.css
+++ b/blocks/modal/__form/modal__form.css
@@ -1,17 +1,15 @@
 .modal__form {
     background-color: #fefefe;
     color: black;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     max-width: 430px;
+    position: relative;
+    min-width: 430px;
 }
 
 @media (max-width: 880px) {
     .modal__form {
-        max-width: 282px;
+        min-width: 282px;
     }
 }
