--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,7 +6,7 @@
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
-    font-family: 'Inter', serif;
+    font-family: 'Inter', 'Arial', serif;
     text-rendering: optimizeLegibility;
     background-color: #000;
     padding-top: 45px;
@@ -14,7 +14,7 @@
 
 
 }
-@media (max-width: 320px)  {
+@media (max-width: 880px)  {
     .page {
         padding-top: 28px;
     }
