--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -10,9 +10,10 @@
 
 @media (max-width: 880px) {
     .profile__info {
-        margin: 0 auto;
+        margin: 0 auto 0 65px;
         max-width: 282px;
         grid-row-gap: 0;
         grid-column-gap: 10px;
+
     }
 }
