--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,12 +5,19 @@
     font-size: 42px;
     line-height: 48px;
     justify-self: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 530px;
 }
 
 @media (max-width: 880px) {
     .profile__name{
+
         font-size: 27px;
         line-height: 33px;
+        text-align: center;
+        max-width: 250px;
         
 
     }
