--- a/blocks/modal/__close/modal__close.css
+++ b/blocks/modal/__close/modal__close.css
@@ -20,5 +20,9 @@
 @media (max-width: 880px) {
     .modal__close {
         right: 0;
+        width: 20px;
+        height: 20px;
+        background-size: 20px;
+        top: -36px;
     }
 }
