--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,14 +3,15 @@
     color: white;
     max-width: 366px;
     display: grid;
-    grid-template-columns: max-content 24px;
+    grid-template-columns: max-content max-content;
     grid-column-gap: 18px;
     grid-row-gap: 16px;
+
 }
 
 @media (max-width: 880px) {
     .profile__info {
-        margin: 0 auto 0 65px;
+        margin: 0 auto 0 46px;
         max-width: 282px;
         grid-row-gap: 0;
         grid-column-gap: 10px;
