--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -12,3 +12,25 @@
 .element__like:hover {
     opacity: 0.5;
 }
+
+
+.element__like_active {
+    background-image: url("../../../images/Like_active.svg");
+}
+
+.element__delete {
+    background-image: url("../../../images/Delete.svg");
+    width: 18px;
+    height: 19px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 1;
+    background-color: rgba(0,0,0, 0);
+    border: 0;
+
+}
+
+.element__delete:hover {
+    opacity: 0.5;
+}
