--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,5 +1,5 @@
 .modal {
-    display: none;
+
     position: fixed;
     z-index: 1;
     left: 0;
@@ -9,6 +9,16 @@
     background-color: rgba(0,0,0,0.5);
     justify-content: center;
     align-items: center;
-
+    display: flex;
+    transition: all 0.8s ease 0s;
+    visibility: hidden;
+    opacity: 0;
 
 }
+
+
+
+
+
+
+
