--- a/pages/index.css
+++ b/pages/index.css
@@ -24,3 +24,7 @@
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__submit-button/form__submit-button.css);
 @import url(../blocks/form/__title/form__title.css);
+@import url(../blocks/modal/_show/modal_show.css);
+@import url(../blocks/modal/__photo/modal__photo.css);
+@import url(../blocks/modal/__title/modal__title.css);
+@import url(../blocks/modal/__conteiner/modal__conteiner.css);
