--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -11,6 +11,7 @@
 
 .element__like:hover {
     opacity: 0.5;
+    cursor: pointer;
 }
 
 
@@ -33,4 +34,5 @@
 
 .element__delete:hover {
     opacity: 0.5;
+    cursor: pointer;
 }
