--- a/blocks/form/__submit-button/_disabled/form__submit-button_disabled.css
+++ b/blocks/form/__submit-button/_disabled/form__submit-button_disabled.css
@@ -4,4 +4,11 @@
     border: 1px solid #000000;
     border-radius: 2px;
     opacity: 0.2;
+
+
+}
+
+.form__submit-button_disabled:hover {
+    background: white;
+    cursor: default;
 }
