--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -15,8 +15,15 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__likes/element__likes.css);
+@import url(../blocks/form/__question/form__question.css);
+@import url(../blocks/element/__like-amount/element__like-amount.css);
 @import url(../blocks/element/__photo/element__photo.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
+@import url(../blocks/profile/__avatar-icon/profile__avatar-icon.css);
+@import url(../blocks/profile/__avatar-edit/profile__avatar-edit.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/modal/__form/modal__form.css);
 @import url(../blocks/modal/__close/modal__close.css);
